Upgraded the autoparts app demo from the SPA lab

--- a/Applications/04-Single-Page-Applications-lab/apps-autoparts-demo/index.html
+++ b/Applications/04-Single-Page-Applications-lab/apps-autoparts-demo/index.html
@@ -10,12 +10,11 @@
 </head>
 
 <body>
+    <div id="notification">
+    </div>
+
     <nav>
-        <a id="home-nav" href="/">Home</a>
-        <a id="catalog-nav" href="/catalog">Catalog</a>
-        <a id="create-nav" href="/create">Create</a>
-        <a id="login-nav" href="/login">Login</a>
-        <a id="register-nav" href="/register">Register</a>
+        <!-- Site navigation -->
     </nav>
 
     <main>
